# LifeBook

./: .env.azure.example  .env.example  .gitignore  Azure_Deployment_Appendix.md  First_Time_Deploy.md  MVP_TODO.md  Product_Vision_Roadmap.md  README.md  Repo_Scaffold.md  V1_Product_Spec.md  docker-compose.override.yml  docker-compose.yml  lifebook_prod_backup_20260211_1950.dump
scripts/: README.md  (+35 more)
services/api/: Dockerfile  pyproject.toml  run-migrations.sh
services/api/alembic/: env.py
services/api/alembic/versions/: 001_initial_schema.py  002_voice_participants.py  003_moment_participant_and_turns.py  004_deleted_at_moments.py  005_voice_stories.py  006_voice_stories_tags_and_shared.py  007_shared_story_listens.py  008_voice_participant_azure_profile.py  009_voice_participant_enrollment_status.py  010_voice_eagle_profile.py  011_shared_at_moments.py  012_rename_older_adult_to_new_user.py  013_voice_participant_recall_passphrase.py  014_narrate_bgm_cache.py  015_moment_reaction_log.py  016_elevenlabs_voice_id.py
services/api/app/: main.py
services/api/app/core/: config.py  logging_config.py
services/api/app/db/: __init__.py  models.py  session.py
services/api/app/routers/: health.py  media.py  moments.py  realtime.py  sessions.py  voice.py
services/api/scripts/: clear_recall_passcode.py  clear_shared_memories.py  dedupe_participants_by_label.py  dump_narration_voice_log.py  test_speaker_recognition.py  test_speaker_recognition_eagle.py  verify_participant_stories_voice.py  verify_voice_clone_narration.py  wait_for_db.py  wipe_all_participants_and_data.py
(+73 files in other folders)
