[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lifebook-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.1",
  "psycopg2-binary>=2.9",
  "alembic>=1.13",
  "python-multipart>=0.0.9",
  "httpx>=0.27",
  "azure-storage-blob>=12.20.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.uvicorn]
factory = false
